[fix] Overflow pag sobre

--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,9 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 90vh;
+    height: 80vh;
     width: 100vw;
+    overflow-y: auto;
 }
 footer{
     height: 10vh;
@@ -248,6 +249,7 @@ footer{
 }
 .connectionsContainer a{
     background-color: #D1D4C9;
+    overflow-wrap: anywhere;
 }
 a{
     color: #D1D4C9;
